--- a/views/listout.jade
+++ b/views/listout.jade
@@ -278,8 +278,9 @@ head
       span(class='glyphicon glyphicon-align-justify' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
     .container(style='padding-left:84px;width:100% !important;padding-right:none;')  
       .row(style='background-color:darkgray;')
-        .col-xs-12(id='buttoninsert')
-          h4(style='margin-bottom:0px;display:inline;') #{mail}
+        .col-xs-12
+          h4(style='margin-bottom:0px;display:inline;') Subscribe to #{mail}'s books and movies lists
+          button(class='btn btn-primary btn-xs' onclick='window.location="http://peopleandbooks.com"' style='border-radius:30px;margin-top:10px;margin-bottom:10px;' type='button') Subscribe
       .row
         .col-xs-6(id='books' style='background-color:#{bh};')
           .row
@@ -296,15 +297,15 @@ head
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
       script(async src='/js/bootstrap.min.js')
       script.
-        var buttonval=!{button};
-        var addbutton ="<button class='btn btn-success btn-xs' onclick='addfriend()' id='addfriendbutton' style='border-radius:30px;margin-top:10px;margin-bottom:10px;margin-left:10px;' type='button'> Subscribe</button>";
-        var rembutton ="<button class='btn btn-warning btn-xs' onclick='remfriend()' id='remfriendbutton' style='border-radius:30px;margin-top:10px;margin-bottom:10px;margin-left:10px;' type='button'> Unsubscribe</button>";
-        if(buttonval){
-          $('#buttoninsert').append(addbutton);
-        }
-        else {
-          $('#buttoninsert').append(rembutton);
-        }
+        //var buttonval=!{button};
+        //var addbutton ="<button class='btn btn-success btn-xs' onclick='addfriend()' id='addfriendbutton' style='border-radius:30px;margin-top:10px;margin-bottom:10px;' type='button'> Subscribe</button>";
+        //var rembutton ="<button class='btn btn-warning btn-xs' onclick='remfriend()' id='remfriendbutton' style='border-radius:30px;margin-top:10px;margin-bottom:10px;' type='button'> Unsubscribe</button>";
+        //if(buttonval){
+        //  $('#buttoninsert').append(addbutton);
+        //}
+        //else {
+        //  $('#buttoninsert').append(rembutton);
+        //}
         // Setting user books/movies counters
         var seenmovies = #{seenmovies};
         var newmovies = #{newmovies};
@@ -418,65 +419,4 @@ head
           }
         });
         //end of sliding menu mechanics
-        var allowadd = 1;
-        function addfriend() {
-          if(!allowadd ){
-            return;
-          }
-         allowadd =0;
-        request = new XMLHttpRequest();
-        request.onreadystatechange = function () {
-        var DONE = this.DONE || 4;
-        if (this.readyState === DONE){
-        parsed = JSON.parse(request.responseText);
-        console.log(parsed);
-        // do your job here
-        if (parsed.trouble === 1)
-        {
-         
-        }
-        else { 
-          $('#addfriendbutton').attr('disabled','true');
-          $('#addfriendbutton').text('в вашем списке');
-        allowadd=1;
-        }
-        }
-        };
-        request.open('POST', '/addfriend', true);
-        request.setRequestHeader('X-Requested-With', 'XMLHttpRequest');  // Tells server that this call is made for ajax purposes.
-        request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-        // Most libraries like jQuery/Prototype/Dojo do this
-        request.send("uid=#{uid}");
-          }
-        var allowrem = 1;
-        function remfriend() {
-          if(!allowrem ){
-            return;
-          }
-         allowrem =0;
-        request = new XMLHttpRequest();
-        request.onreadystatechange = function () {
-        var DONE = this.DONE || 4;
-        if (this.readyState === DONE){
-        parsed = JSON.parse(request.responseText);
-        console.log(parsed);
-        // do your job here
-        if (parsed.trouble === 1)
-        {
-         
-        }
-        else { 
-          $('#remfriendbutton').attr('disabled','true');
-          $('#remfriendbutton').text('Removed');
-        allowrem=1;
-        }
-        }
-        };
-        request.open('POST', '/remfriend', true);
-        request.setRequestHeader('X-Requested-With', 'XMLHttpRequest');  // Tells server that this call is made for ajax purposes.
-        request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-        // Most libraries like jQuery/Prototype/Dojo do this
-        request.send("uid=#{uid}");
-          }
         
-      
