--- a/views/listout.jade
+++ b/views/listout.jade
@@ -280,7 +280,7 @@ head
       .row(style='background-color:darkgray;')
         .col-xs-12
           h4(style='margin-bottom:0px;display:inline;') Subscribe to #{mail}'s books and movies lists
-          button(class='btn btn-primary btn-xs' onclick='window.location="http://peopleandbooks.com"' style='border-radius:30px;margin-top:10px;margin-bottom:10px;' type='button') Subscribe
+          button(class='btn btn-primary btn-xs' onclick='window.location="http://peopleandbooks.com"' style='border-radius:30px;margin-top:10px;margin-bottom:10px;margin-left:10px;' type='button') Subscribe
       .row
         .col-xs-6(id='books' style='background-color:#{bh};')
           .row
