--- a/views/index.jade
+++ b/views/index.jade
@@ -205,7 +205,7 @@ head
       //img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-left:5px;margin-top:30px;width:64px;height:64px;' alt="...")
       span(class='glyphicon glyphicon-align-justify' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
     .bckgrnd
-    .container(style='padding-left:84px;width:100% !important;padding-right:none;z-index:2;')  
+    .container(style='padding-left:84px;z-index:2;')  
       .row(style='text-align:center;margin-top:15%;margin-bottom:20px;')
         .col-xs-12
           h1(style='font-size:50px;') Organise your reading. 
