--- a/views/listout.jade
+++ b/views/listout.jade
@@ -261,12 +261,12 @@ head
       window.location='http://m.peopleandbooks.com/';
       }
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
-      form(class="navbar-form navbar-right" method='post' action='/srch' id='srch' style='margin-top: 15px;' role="search")
-        .input-group
-           input(type="text" class="form-control" name='searchfield' id='searchfield' style='background-color:#333;color:white;border-color:#333;border-top-left-radius:30px;border-bottom-left-radius:30px;') 
-           span(class='input-group-btn')
-             button(class="btn btn-default" type="submit" id='searchbutton' style='padding-top:9px;padding-bottom:9px;background-color:#333;color:gray;border-color:#333;border-top-right-radius:30px;border-bottom-right-radius:30px;')
-               span(class='glyphicon glyphicon-search') 
+      //form(class="navbar-form navbar-right" method='post' action='/srch' id='srch' style='margin-top: 15px;' role="search")
+      //  .input-group
+      //     input(type="text" class="form-control" name='searchfield' id='searchfield' style='background-color:#333;color:white;border-color:#333;border-top-left-radius:30px;border-bottom-left-radius:30px;') 
+      //     span(class='input-group-btn')
+      //       button(class="btn btn-default" type="submit" id='searchbutton' style='padding-top:9px;padding-bottom:9px;background-color:#333;color:gray;border-color:#333;border-top-right-radius:30px;border-bottom-right-radius:30px;')
+      //         span(class='glyphicon glyphicon-search') 
       a(href='/') Регистрация/вход
       a(href='/about') О проекте
       img(class="media-object img-circle" src="/images/pblogov4.png" style='position:absolute;opacity:0.2;left:88px;bottom:20px;width:64px;height:64px;' alt="...")
