--- a/views/index.jade
+++ b/views/index.jade
@@ -198,7 +198,7 @@ head
       //     span(class='input-group-btn')
       //       button(class="btn btn-default" type="submit" id='searchbutton' style='padding-top:9px;padding-bottom:9px;background-color:#333;color:gray;border-color:#333;border-top-right-radius:30px;border-bottom-right-radius:30px;')
       //         span(class='glyphicon glyphicon-search') 
-      a(href='/about') О проекте
+      a( style='margin-top:20px;' href='/about') О проекте
     .sidebar(style='width:74px;position:fixed;height:100%;background-color:#1d1d1d;text-align:center;z-index:2000;')
       //img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-left:5px;margin-top:30px;width:64px;height:64px;' alt="...")
       span(class='glyphicon glyphicon-align-justify' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
