--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -282,7 +282,7 @@ head
       //     span(class='input-group-btn')
       //       button(class="btn btn-default" type="submit" id='searchbutton' style='padding-top:9px;padding-bottom:9px;background-color:#222;color:gray;border-color:#333;border-top-right-radius:30px;border-bottom-right-radius:30px;')
       //         span(class='glyphicon glyphicon-search') 
-      a(class='activemenuitem') Мои списки
+      a( style='margin-top:20px;' class='activemenuitem') Мои списки
       a(href="/people") Списки друзей
       a(href="/settings") Настройки
       a(href='/about') О проекте
