--- a/views/people.jade
+++ b/views/people.jade
@@ -192,7 +192,7 @@ head
       //     span(class='input-group-btn')
       //       button(class="btn btn-default" type="submit" id='searchbutton' style='padding-top:9px;padding-bottom:9px;background-color:#333;color:gray;border-color:#333;border-top-right-radius:30px;border-bottom-right-radius:30px;')
       //         span(class='glyphicon glyphicon-search') 
-      a(href="/") Мои списки
+      a(style='margin-top:20px;' href="/") Мои списки
       a(class='activemenuitem') Списки друзей
       a(href="/settings") Настройки
       a(href='/about') О проекте
