--- a/views/index.jade
+++ b/views/index.jade
@@ -249,13 +249,14 @@ head
                          $('#showLeft').removeClass('active' );
                          $('#cbp-spmenu-s1').removeClass('cbp-spmenu-open' );
                          $('.container').css('-webkit-filter','brightness(1)');
-                         $('body').css('-webkit-filter','brightness(1)');
+                         $('.bckgrnd').css('-webkit-filter','brightness(1)');
                         break;
                         case(0):
                           counter=1;
                           $('#showLeft').addClass('active' );
                           $('#cbp-spmenu-s1').addClass('cbp-spmenu-open' );
-                          $('body').css('-webkit-filter','brightness(0.6)');
+                          $('.container').css('-webkit-filter','brightness(0.6)');
+                          $('.bckgrnd').css('-webkit-filter','brightness(0.6)');
                         break;
                       }
         };
