--- a/views/index.jade
+++ b/views/index.jade
@@ -126,6 +126,10 @@ head
       }
       .container {
         transition: 0.5s -webkit-filter linear;
+        transition: 0.5s -webkit-filter linear;
+        transition: 0.5s -moz-filter linear;
+        -webkit-transition: 0.5s -webkit-filter linear;
+        -moz-transition: 0.5s -moz-filter linear;
       }
       .navbar-right {
         float: none !important; 
@@ -178,6 +182,11 @@ head
       -webkit-filter: brightness(0.6);
       -moz-filter: brightness(0.6);
       -o-filter: brightness(0.6);
+      transition: 0.5s -webkit-filter linear;
+        transition: 0.5s -webkit-filter linear;
+        transition: 0.5s -moz-filter linear;
+        -webkit-transition: 0.5s -webkit-filter linear;
+        -moz-transition: 0.5s -moz-filter linear;
       }
       nav ul li a {
         border:0px !important;
