--- a/views/index.jade
+++ b/views/index.jade
@@ -193,6 +193,9 @@ head
         background-color:rgba(255, 255, 255, 0.26) !important;
         color:white !important;
       }
+      a{
+        color:white;
+      }
   body
     script.
       if(screen.width < 414){
