--- a/views/about.jade
+++ b/views/about.jade
@@ -72,7 +72,7 @@ head
       
       .cbp-spmenu a {
         display: block;
-        color: #999;
+        color: white;
         font-size: 1.1em;
         font-weight: 300;
       }
@@ -145,9 +145,6 @@ head
       {
           outline:0px !important;
           -webkit-appearance:none;
-      }
-      a {
-        color:white !important;
       }
       #stlink {
         color:gray !important;
