--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -73,7 +73,7 @@ head
       
       .cbp-spmenu a {
         display: block;
-        color: #999;
+        color: white;
         font-size: 1.1em;
         font-weight: 300;
       }
@@ -165,9 +165,6 @@ head
       padding: 5px 14px;
       border: 0px;
       border-radius: 30px;
-      }
-      a {
-        color:white !important;
       }
       .container {
         filter:brightness(1);
