--- a/views/mabout.jade
+++ b/views/mabout.jade
@@ -94,7 +94,7 @@ head
       }
       .cbp-spmenu a {
         display: block;
-        color: #ddd;
+        color: white;
         font-size: 20px;
         font-weight: 300;
       }
