--- a/views/newsettings.jade
+++ b/views/newsettings.jade
@@ -85,7 +85,7 @@ head
       
       .cbp-spmenu a {
         display: block;
-        color: #999;
+        color: white;
         font-size: 1.1em;
         font-weight: 300;
       }
@@ -161,9 +161,6 @@ head
       }
       .cont {
         margin-left:20px;
-      }
-      a {
-        color:white !important;
       }
       .activemenuitem {
         background-color:#333;
