--- a/views/people.jade
+++ b/views/people.jade
@@ -90,7 +90,7 @@ head
       
       .cbp-spmenu a {
         display: block;
-        color: #999;
+        color: white;
         font-size: 1.1em;
         font-weight: 300;
       }
@@ -169,9 +169,6 @@ head
       }
       #inserts {
         padding-left:20px;
-      }
-      a {
-        color:white !important;
       }
       .activemenuitem {
         background-color:#333;
