--- a/views/listin.jade
+++ b/views/listin.jade
@@ -73,7 +73,7 @@ head
       
       .cbp-spmenu a {
         display: block;
-        color: #999;
+        color: white;
         font-size: 1.1em;
         font-weight: 300;
       }
@@ -251,9 +251,6 @@ head
        h6 .small,
        h6 small {
       #{small}
-      }
-      a {
-        color:white !important;
       }
   body
     script.
