--- a/views/newemptyindexreg.jade
+++ b/views/newemptyindexreg.jade
@@ -72,7 +72,7 @@ head
       
       .cbp-spmenu a {
         display: block;
-        color: #999;
+        color: white;
         font-size: 1.1em;
         font-weight: 300;
       }
@@ -269,9 +269,6 @@ head
         -o-filter:blur(4px) brightness(0.8);
         -moz-filter:blur(4px) brightness(0.8);
         transition:filter 1s;
-      }
-      a {
-        color:white !important;
       }
       .activemenuitem {
         background-color:#333;
