--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -504,6 +504,14 @@ head
                       }
         };
         //end of sliding menu mechanics
+        $('.container').click(function(){
+          if($('#cbp-spmenu-s1').hasClass('cbp-spmenu-open' );){
+            $('#showLeft').removeClass('active' );
+            $('#cbp-spmenu-s1').removeClass('cbp-spmenu-open' );
+            $('.container').css({'-webkit-filter':'brightness(1)','-moz-filter':'brightness(1)','filter':'brightness(1)'});
+            $('.bckgrnd').css({'-webkit-filter':'brightness(1)','-moz-filter':'brightness(1)','filter':'brightness(1)'});
+          }
+          });
         // Book submit mechanics
         var allowsubmit = 1;
         function booksubmit() {
