--- a/views/newemptyindexreg.jade
+++ b/views/newemptyindexreg.jade
@@ -279,13 +279,13 @@ head
       window.location='http://m.peopleandbooks.com/';
       }
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
-      form(class="navbar-form navbar-right" method='post' action='/srch' id='srch' role="search")
-        .input-group
-           input(type="text" class="form-control" name='searchfield' id='searchfield' style='background-color:#333;color:white;border-color:#333;border-top-left-radius:30px;border-bottom-left-radius:30px;') 
-           span(class='input-group-btn')
-             button(class="btn btn-default" type="submit" id='searchbutton' style='padding-top:9px;padding-bottom:9px;background-color:#333;color:gray;border-color:#333;border-top-right-radius:30px;border-bottom-right-radius:30px;')
-               span(class='glyphicon glyphicon-search') 
-      a(class='activemenuitem') Мои списки
+      //form(class="navbar-form navbar-right" method='post' action='/srch' id='srch' role="search")
+      //  .input-group
+      //     input(type="text" class="form-control" name='searchfield' id='searchfield' style='background-color:#333;color:white;border-color:#333;border-top-left-radius:30px;border-bottom-left-radius:30px;') 
+      //     span(class='input-group-btn')
+      //       button(class="btn btn-default" type="submit" id='searchbutton' style='padding-top:9px;padding-bottom:9px;background-color:#333;color:gray;border-color:#333;border-top-right-radius:30px;border-bottom-right-radius:30px;')
+      //         span(class='glyphicon glyphicon-search') 
+      a(style='margin-top:20px;' class='activemenuitem') Мои списки
       a(href='/people') Списки друзей
       a(href="/settings") Настройки
       a(href='/about') О проекте
@@ -473,6 +473,13 @@ head
                         break;
                       }
         };
+        $('.container').click(function(){
+          if($('#cbp-spmenu-s1').hasClass('cbp-spmenu-open' );){
+            $('#showLeft').removeClass('active' );
+            $('#cbp-spmenu-s1').removeClass('cbp-spmenu-open' );
+            $('.container').css('-webkit-filter','brightness(1)');
+          }
+          });
         $('#movies').click(function() {
           console.log('container touch');
          if(counter)
