--- a/views/newsettings.jade
+++ b/views/newsettings.jade
@@ -298,6 +298,15 @@ head
                       }
         };
         //end of sliding menu mechanics
+        $('.container').click(function(){
+          if($('#cbp-spmenu-s1').hasClass('cbp-spmenu-open' );){
+            $('#showLeft').removeClass('active' );
+            $('#cbp-spmenu-s1').removeClass('cbp-spmenu-open' );
+            $('.container').css({'-webkit-filter':'brightness(1)','-moz-filter':'brightness(1)','filter':'brightness(1)'});
+            $('.bckgrnd').css({'-webkit-filter':'brightness(1)','-moz-filter':'brightness(1)','filter':'brightness(1)'});
+          }
+          });
+        //
         $('#first').click(function() {
           $(this).attr('checked',true);
           $('#third').attr('checked', false);
