--- a/views/newemptyindexreg.jade
+++ b/views/newemptyindexreg.jade
@@ -474,7 +474,7 @@ head
                       }
         };
         $('.container').click(function(){
-          if($('#cbp-spmenu-s1').hasClass('cbp-spmenu-open' );){
+          if($('#cbp-spmenu-s1').hasClass('cbp-spmenu-open' )){
             $('#showLeft').removeClass('active' );
             $('#cbp-spmenu-s1').removeClass('cbp-spmenu-open' );
             $('.container').css('-webkit-filter','brightness(1)');
