--- a/views/people.jade
+++ b/views/people.jade
@@ -269,7 +269,7 @@ head
         };
         //end of sliding menu mechanics
         $('.container').click(function(){
-          if($('#cbp-spmenu-s1').hasClass('cbp-spmenu-open' );){
+          if($('#cbp-spmenu-s1').hasClass('cbp-spmenu-open' )){
             $('#showLeft').removeClass('active' );
             $('#cbp-spmenu-s1').removeClass('cbp-spmenu-open' );
             $('.container').css({'-webkit-filter':'brightness(1)','-moz-filter':'brightness(1)','filter':'brightness(1)'});
