--- a/views/listout.jade
+++ b/views/listout.jade
@@ -382,7 +382,7 @@ head
         };
         //
         $('.container').click(function(){
-          if($('#cbp-spmenu-s1').hasClass('cbp-spmenu-open' );){
+          if($('#cbp-spmenu-s1').hasClass('cbp-spmenu-open' )){
             $('#showLeft').removeClass('active' );
             $('#cbp-spmenu-s1').removeClass('cbp-spmenu-open' );
             $('.container').css({'-webkit-filter':'brightness(1)','-moz-filter':'brightness(1)','filter':'brightness(1)'});
