--- a/views/aboutout.jade
+++ b/views/aboutout.jade
@@ -236,6 +236,7 @@ head
         //end of sliding menu mechanics
         $('.container').click(function(){
           if($('#cbp-spmenu-s1').hasClass('cbp-spmenu-open' )){
+            counter=0;
             $('#showLeft').removeClass('active' );
             $('#cbp-spmenu-s1').removeClass('cbp-spmenu-open' );
             $('.container').css('-webkit-filter','brightness(1)');
