--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -506,6 +506,7 @@ head
         //end of sliding menu mechanics
         $('.container').click(function(){
           if($('#cbp-spmenu-s1').hasClass('cbp-spmenu-open' )){
+            counter=0;
             $('#showLeft').removeClass('active' );
             $('#cbp-spmenu-s1').removeClass('cbp-spmenu-open' );
             $('.container').css({'-webkit-filter':'brightness(1)','-moz-filter':'brightness(1)','filter':'brightness(1)'});
