--- a/views/listin.jade
+++ b/views/listin.jade
@@ -385,6 +385,7 @@ head
         //
         $('.container').click(function(){
           if($('#cbp-spmenu-s1').hasClass('cbp-spmenu-open' )){
+            counter=0;
             $('#showLeft').removeClass('active' );
             $('#cbp-spmenu-s1').removeClass('cbp-spmenu-open' );
             $('.container').css({'-webkit-filter':'brightness(1)','-moz-filter':'brightness(1)','filter':'brightness(1)'});
