--- a/views/newemptyindexreg.jade
+++ b/views/newemptyindexreg.jade
@@ -475,6 +475,7 @@ head
         };
         $('.container').click(function(){
           if($('#cbp-spmenu-s1').hasClass('cbp-spmenu-open' )){
+            counter=0;
             $('#showLeft').removeClass('active' );
             $('#cbp-spmenu-s1').removeClass('cbp-spmenu-open' );
             $('.container').css('-webkit-filter','brightness(1)');
