--- a/views/people.jade
+++ b/views/people.jade
@@ -209,7 +209,7 @@ head
       //img(class="media-object img-circle" src="/bootstrap/images/seo.jpg" style='margin-left:5px;margin-top:30px;width:64px;height:64px;' alt="...")
       span(class='glyphicon glyphicon-align-justify' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
     .bckgrnd
-    .container(style='padding-left:40px;')  
+    .container(style='padding-left:40px;min-height:100vh;')  
       .row
         .col-xs-12
           h1(style='font-family:roboto-light;') People
