--- a/views/about.jade
+++ b/views/about.jade
@@ -232,6 +232,7 @@ head
             body = document.body;
         
         showLeft.onclick = function() {
+          console.log('hey');
           switch(counter)
             {case(1):
                          counter=0;
