--- a/views/about.jade
+++ b/views/about.jade
@@ -243,10 +243,10 @@ head
                         break;
                         case(0):
                           counter=1;
-                          $('#showLeft').removeClass('active' );
-                         $('#cbp-spmenu-s1').removeClass('cbp-spmenu-open' );
-                         $('.container').css({'-webkit-filter':'brightness(1)','-moz-filter':'brightness(0.6)','filter':'brightness(0.6)'});
-                         $('.bckgrnd').css({'-webkit-filter':'brightness(0.6)','-moz-filter':'brightness(0.6)','filter':'brightness(0.6)'});
+                         $('#showLeft').addClass('active' );
+                          $('#cbp-spmenu-s1').addClass('cbp-spmenu-open' );
+                          $('.container').css({'-webkit-filter':'brightness(0.6)','-moz-filter':'brightness(0.6)','filter':'brightness(0.6)'});
+                          $('.bckgrnd').css({'-webkit-filter':'brightness(0.6)','-moz-filter':'brightness(0.6)','filter':'brightness(0.6)'});
                         break;
                       }
         };
