--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -177,9 +177,9 @@ head
         #message.col-xs-12
       .row(style='text-align:center;')
         .col-xs-12
-          input(class='form-control' type='email' style='margin-bottom:5px;' id='vlgn' name='mail' placeholder='email')
-          input(class='form-control' type='password' style='margin-bottom:5px;' id='vphr' name='p' placeholder='password')
-          input(class='form-control' type='password' style='display:none;' id='pc' name='pc' placeholder='password')
+          input(class='form-control' type='email' style='margin-bottom:10px;font-size:25px;height:auto;' id='vlgn' name='mail' placeholder='email')
+          input(class='form-control' type='password' style='margin-bottom:10px;font-size:25px;height:auto;' id='vphr' name='p' placeholder='password')
+          input(class='form-control' type='password' style='display:none;font-size:25px;height:auto;' id='pc' name='pc' placeholder='password')
           #wrap(style='width:100%;margin-top:20px;')
             button(class='btn btn-primary' type='button' id='shownav' style='position:absolute;margin-left:-60;left:50%;z-index:2;border-radius:30px;background-color:rgba(255, 255, 255, 0.26);border:0px;') Log in / Register
             nav(id='nav' style='z-index:1;display:none;')
