--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -171,8 +171,8 @@ head
     .container
       .row(style='text-align:center;margin-top:15%;margin-bottom:20px;')
         .col-xs-12
-          img(src='/images/pblogov4.png' style='margin-left:20px;margin-right:20px;width:200px;height:200px;') 
-          h3 Reading and watching lists.
+          h1(style='font-size:50px;') Organise your reading. 
+          h3 Never forget a book.
       .row
         #message.col-xs-12
       .row(style='text-align:center;')
@@ -181,7 +181,7 @@ head
           input(class='form-control' type='password' style='margin-bottom:10px;font-size:20px;height:auto;' id='vphr' name='p' placeholder='password')
           input(class='form-control' type='password' style='display:none;font-size:20px;height:auto;' id='pc' name='pc' placeholder='confirmatioin')
           #wrap(style='width:100%;margin-top:20px;')
-            button(class='btn btn-primary' type='button' id='shownav' style='font-size:20px;position:absolute;margin-left:-60;left:50%;z-index:2;border-radius:30px;background-color:rgba(255, 255, 255, 0.26);border:0px;') Log in / Register
+            button(class='btn btn-primary' type='button' id='shownav' style='font-size:20px;position:absolute;margin-left:-80;left:50%;z-index:2;border-radius:30px;background-color:rgba(255, 255, 255, 0.26);border:0px;') Log in / Register
             nav(id='nav' style='z-index:1;display:none;')
               ul(class="pager")
                 li(class='previous')
