--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -169,7 +169,7 @@ head
       a(href='http://m.peopleandbooks.com/about') О проекте
     .bckgrnd
     .container
-      .row(style='text-align:center;margin-top:15%;margin-bottom:20px;')
+      .row(style='text-align:center;margin-top:15%;margin-bottom:10vh;')
         .col-xs-12
           h1(style='font-size:50px;') Organise your reading. 
           h3 Never forget a book.
