--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -106,7 +106,7 @@ head
       .cbp-spmenu a {
         display: block;
         color: #999;
-        font-size: 1.1em;
+        font-size: 20px;
         font-weight: 300;
       }
       
