--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -105,7 +105,7 @@ head
       
       .cbp-spmenu a {
         display: block;
-        color: #999;
+        color: white;
         font-size: 20px;
         font-weight: 300;
       }
