--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -508,8 +508,7 @@ head
                          {
                           $('#maincont').css('-webkit-filter','brightness(0.4)');
                          }
-                         else{
-                         $('.container').css('-webkit-filter','brightness(1)');}
+                         $('.container').css('-webkit-filter','brightness(1)');
                         break;
                         case(0):
                           counter=1;
