--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -35,6 +35,8 @@ head
       }
       h3 {
         font-family:roboto-thin;
+        margin-top:7px;
+        margin-bottom:7px;
       }
       h4 {
         font-family:roboto-thin;
