--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -258,19 +258,19 @@ head
       a(href="http://m.peopleandbooks.com/settings") Настройки
       a(href='http://m.peopleandbooks.com/about') О проекте
       a(href="http://peopleandbooks.com/logout") Выйти
-    .container( id='maincont' style='-webkit-filter:brightness(1);background-color:#{bh};overflow:auto;height:100%;padding-right:0px;padding-bottom:74px;')
+    .container( id='maincont' style='-webkit-filter:brightness(1);background-color:#{bh};overflow:auto;height:100%;padding-bottom:74px;')
       #booksrow.row
         .col-xs-12
           .row
             .col-xs-12(style='text-align:center;')
-              h1(id='booksfigures' style='font-family:high;font-size:100px;font-weight:bold;color:#{bcl};padding-right:20px;')
+              h1(id='booksfigures' style='font-family:high;font-size:100px;font-weight:bold;color:#{bcl};')
           .row
             #bookinsert.col-xs-12
       #moviesrow.row(style='display:none;')
         .col-xs-12
           .row
             .col-xs-12(style='text-align:center;')
-              h1(id='moviesfigures' style='font-family:high;font-size:100px;font-weight:bold;color:#{mcl};padding-right:20px;')
+              h1(id='moviesfigures' style='font-family:high;font-size:100px;font-weight:bold;color:#{mcl};')
           .row
             #movieinsert.col-xs-12
     footer(class='footer')
