--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -201,6 +201,7 @@ head
       }
       label {
         color:white;
+        font-size:20px;
       }
       .h1 .small,
        .h1 small,
@@ -242,6 +243,10 @@ head
       }
       .activemenuitem {
         background-color:#333;
+      }
+      .form-control{
+        font-size:20px;
+        height:auto;
       }
   body
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
@@ -300,9 +305,9 @@ head
             nav
               ul(class="pager")
                 li(class="previous")
-                  a(style='background-color:#EFAF4F;' id='booksubmitbutton') Add
+                  a(style='background-color:#EFAF4F;font-size:20px;border-radius:30px;' id='booksubmitbutton') Add
                 li(class="next")
-                  a( class='addbookbutton' style='background-color:#999;') Close
+                  a( class='addbookbutton' style='background-color:#999;font-size:20px;border-radius:30px;') Close
         .row(id='addmovie' style='display:none;padding-top:20px;background-color:#{mhl};')
           .col-xs-12
             .form-group
