--- a/views/mpeople.jade
+++ b/views/mpeople.jade
@@ -25,7 +25,7 @@ head
       src: url('/bootstrap/fonts/Attentica.ttf');
       }
       body {
-      background-color:#2F83B0;
+      background-color:#ddd;
       font-family:roboto-thin;
       }
       .container{
@@ -180,11 +180,10 @@ head
       a(href="/settings") Настройки
       a(href='/about') О проекте
       a(href="http://peopleandbooks.com/logout") Выйти
-    .container(style='padding-left:40px;')  
-      .row(style='color:white;')
+    .container  
+      .row
         .col-xs-12
           h3 People
-          h5(style='margin-bottom:0px;') #{mail}
       .row
         .col-xs-12(id='inserts')
     button(type='button' id='showLeft' style='color:white;font-size:30px;position:absolute;bottom:15px;right:15px;border:0px;background-color:transparent;') 
