--- a/views/restricted.jade
+++ b/views/restricted.jade
@@ -61,7 +61,7 @@ head
     .container
       .row
         .col-xs-12(style='text-align:center;margin-top:20vh;margin-bottom:5vh;') 
-          img(src='/images/pblogov4black.png' style='margin-left:auto;margin-right:auto;height:200px;width:200px;mergin-bottom:5vh;')
+          img(src='/images/pblogov4black.png' style='margin-left:auto;margin-right:auto;height:200px;width:200px;')
           h3(style='margin-top:15vh;') This list is private.
           
          
