--- a/views/404.jade
+++ b/views/404.jade
@@ -24,15 +24,15 @@ head
         font-family:roboto-thin;
         font-size:50px;
       }
-      h2 {
+      h3 {
         font-family:roboto-thin;
       }
   body
     .container
       .row
         .col-xs-12(style='text-align:center;margin-top:20vh;') 
-          img(src='/images/pblogov3.png' style='margin-left:auto;margin-right:auto;height:200px;width:200px;mergin-bottom:5vh;')
-          h2 404
+          img(src='/images/pblogov3.png' style='margin-left:auto;margin-right:auto;height:200px;width:200px;')
+          h3(style='margin-top:15vh;') 404
          
 
       
