--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -333,9 +333,9 @@ head
             nav
               ul(class="pager")
                 li(class="previous")
-                  a(style='background-color:#EFAF4F;' id='moviesubmitbutton') Add
+                  a(style='background-color:#EFAF4F;font-size:20px;border-radius:30px;' id='moviesubmitbutton') Add
                 li(class="next")
-                  a( class='addbookbutton' style='background-color:#999;') Close
+                  a( class='addbookbutton' style='background-color:#999;font-size:20px;border-radius:30px;') Close
         .row(style='text-align:center;')
           .col-xs-3.addbookbutton
             h1( style='color:white;font-size:40px;padding-top:10px;padding-bottom:10px;margin-top:0px;margin-bottom:0px;') +
