--- a/views/people.jade
+++ b/views/people.jade
@@ -232,7 +232,7 @@ head
           });
         }
         else {
-         $('#inserts').append("<h4 style='color:white'> Людей нет</h4>");
+         $('#inserts').append("<h4> Людей нет</h4>");
         }
         function away(dest){
           eval("window.location='http://peopleandbooks.com/lists/"+dest+"';");
